--- a/client/stylesheets/components/views/_login.scss
+++ b/client/stylesheets/components/views/_login.scss
@@ -2,3 +2,33 @@
   display: block;
   @extend %clearfix;
 }
+.btn-facebook{
+	background: #3B5998;
+    color: #fff;
+}
+.btn-facebook:hover{
+	background: #2C4780;
+}
+.at-sep {
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 15px
+}
+
+.at-sep:before, .at-sep:after {
+    display: block;
+    content: " ";
+    border-bottom: 1px solid #ddd;
+    width: 100%;
+    position: absolute;
+    top: 48%
+}
+
+.at-sep:before {
+    left: -60%
+}
+
+.at-sep:after {
+    right: -60%
+}
